cabal-version: 3.0
name: cardano-ledger-canonical-state
version: 9.9.9.9
synopsis:
  Instaces for working with canonical ledger state representation

description:
  Library for definition of the canonical state. The library defines canonical types and conversion
  functions for the non era-specific parts of the Cardano ledger state.

license: Apache-2.0
license-file: LICENSE
author: Tweag
maintainer: operations@iohk.io
category: Cardano
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger.git
  subdir: libs/cardano-ledger-canonical-state

library
  import: warnings
  default-language: Haskell2010
  exposed-modules:
    Cardano.Ledger.CanonicalState.BasicTypes
    Cardano.Ledger.CanonicalState.LedgerCBOR
    Cardano.Ledger.CanonicalState.Namespace
    Cardano.Ledger.CanonicalState.Namespace.Blocks.V0
    Cardano.Ledger.CanonicalState.Namespace.GovConstitution.V0
    Cardano.Ledger.CanonicalState.Namespace.UTxO.V0

  hs-source-dirs: src
  build-depends:
    base,
    base16-bytestring,
    bytestring,
    cardano-ledger-binary,
    cardano-ledger-core,
    cborg,
    mempack-scls,
    scls-cardano,
    scls-cbor,
    scls-core,

library conway
  import: warnings
  default-language: Haskell2010
  exposed-modules:
    Cardano.Ledger.CanonicalState.Conway

  hs-source-dirs: conway
  build-depends:
    base,
    cardano-ledger-canonical-state,
    cardano-ledger-conway,
    scls-core,

library testlib
  import: warnings
  exposed-modules:
    Test.Cardano.Ledger.CanonicalState.Arbitrary
    Test.Cardano.Ledger.Conway.CanonicalState.Arbitrary

  visibility: public
  hs-source-dirs: testlib
  default-language: Haskell2010
  build-depends:
    QuickCheck,
    base,
    cardano-ledger-canonical-state:{cardano-ledger-canonical-state, conway},
    cardano-ledger-conway:{cardano-ledger-conway, testlib},
    cardano-ledger-core,
    generic-random,

test-suite tests
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Paths_cardano_ledger_canonical_state
    Test.Cardano.Ledger.CanonicalState.Spec

  default-language: Haskell2010
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base,
    cardano-ledger-canonical-state:{cardano-ledger-canonical-state, conway, testlib},
    cardano-ledger-conway,
    cardano-ledger-core:testlib,
    scls-cardano:testlib,
    scls-cbor,
