cabal-version: 3.0
name:          cardano-ledger-conformance
version:       0.1.0.0
license:       Apache-2.0
maintainer:    operations@iohk.io
author:        IOHK
bug-reports:   https://github.com/intersectmbo/cardano-ledger/issues
synopsis:      Testing utilities for conformance testing
description:   Testing utilities for conformance testing
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger
    subdir:   libs/cardano-ledger-conformance

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:  Test.Cardano.Ledger.Conformance
    hs-source-dirs:   src
    other-modules:
        Test.Cardano.Ledger.Conformance.Orphans
        Test.Cardano.Ledger.Conformance.SpecTranslate
        Test.Cardano.Ledger.Conformance.ExecutableSpecRule

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        cardano-ledger-core,
        cardano-ledger-shelley:testlib,
        cardano-ledger-executable-spec,
        cardano-ledger-core:testlib,
        constrained-generators,
        small-steps >=1.1,
        mtl,
        text

    if !impl(ghc >=9.2)
        ghc-options: -Wno-incomplete-patterns

    if flag(asserts)
        ghc-options: -fno-ignore-asserts
