cabal-version: 3.0
name: cardano-ledger-conformance
version: 0.1.0.0
license: Apache-2.0
maintainer: operations@iohk.io
author: IOHK
bug-reports: https://github.com/intersectmbo/cardano-ledger/issues
synopsis: Testing utilities for conformance testing
description: Testing utilities for conformance testing
build-type: Simple

source-repository head
  type: git
  location: https://github.com/intersectmbo/cardano-ledger
  subdir: libs/cardano-ledger-conformance

flag asserts
  description: Enable assertions
  default: False

library
  exposed-modules:
    Test.Cardano.Ledger.Conformance
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Base
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Core
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Base
    Test.Cardano.Ledger.Conformance.SpecTranslate.Core
    Test.Cardano.Ledger.Conformance.Utils

  hs-source-dirs: src
  other-modules:
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Cert
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Certs
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Deleg
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Gov
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.GovCert
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Ledger
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Ledgers
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Pool
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Utxo
    Test.Cardano.Ledger.Conformance.ExecSpecRule.Conway.Utxow
    Test.Cardano.Ledger.Conformance.Orphans
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Cert
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Certs
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Deleg
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Gov
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.GovCert
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Ledger
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Ledgers
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Pool
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Utxo
    Test.Cardano.Ledger.Conformance.SpecTranslate.Conway.Utxow

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages

  build-depends:
    base >=4.14 && <5,
    base16-bytestring,
    cardano-crypto-class,
    cardano-data,
    cardano-ledger-allegra,
    cardano-ledger-alonzo,
    cardano-ledger-api:testlib,
    cardano-ledger-babbage,
    cardano-ledger-binary:{cardano-ledger-binary, testlib},
    cardano-ledger-conway:{cardano-ledger-conway, testlib},
    cardano-ledger-core,
    cardano-ledger-core:testlib,
    cardano-ledger-executable-spec,
    cardano-ledger-shelley:{cardano-ledger-shelley, testlib},
    cardano-ledger-shelley-test,
    cardano-ledger-test,
    cardano-strict-containers,
    constrained-generators,
    containers,
    data-default,
    deepseq,
    filepath,
    microlens,
    microlens-mtl,
    mtl,
    prettyprinter,
    prettyprinter-ansi-terminal,
    small-steps >=1.1,
    text,
    unliftio,
    vector-map,

  if !impl(ghc >=9.2)
    ghc-options: -Wno-incomplete-patterns

  if flag(asserts)
    ghc-options: -fno-ignore-asserts

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Cardano.Ledger.Conformance.ConformanceSpec
    Test.Cardano.Ledger.Conformance.ExecSpecRule.MiniTrace
    Test.Cardano.Ledger.Conformance.Imp
    Test.Cardano.Ledger.Conformance.Imp.Ratify
    Test.Cardano.Ledger.Conformance.Spec.Conway

  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wpartial-fields
    -Wunused-packages
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.14 && <5,
    cardano-data,
    cardano-ledger-alonzo,
    cardano-ledger-conformance,
    cardano-ledger-conway:{cardano-ledger-conway, testlib},
    cardano-ledger-core:{cardano-ledger-core, testlib},
    cardano-ledger-executable-spec,
    cardano-ledger-shelley,
    cardano-ledger-test,
    cardano-strict-containers,
    constrained-generators,
    containers,
    microlens,
    microlens-mtl,
    small-steps,
    unliftio,
